force-app/main/default/objects/Employer_Profile__c/Employer_Profile__c.object-meta.xml
<CustomObject>
    <description>New custom object to store employer data</description>
    <label>Employer Profile</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employer Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>