force-app/main/default/objects/Employer_Profile__c/fields/Avg_Salary_Range_Min__c.field-meta.xml
<CustomField>
    <fullName>Avg_Salary_Range_Min__c</fullName>
    <label>Avg Salary Range Min</label>
    <length>255</length>
    <type>Text</type>
</CustomField>