force-app/main/default/objects/Employer_Profile__c/fields/Careers_Page_URL__c.field-meta.xml
<CustomField>
    <fullName>Careers_Page_URL__c</fullName>
    <label>Careers Page URL</label>
    <type>Url</type>
</CustomField>