force-app/main/default/objects/Employer_Profile__c/fields/Company_Values__c.field-meta.xml
<CustomField>
    <fullName>Company_Values__c</fullName>
    <label>Company Values</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>