force-app/main/default/objects/Employer_Profile__c/fields/Culture_Highlights__c.field-meta.xml
<CustomField>
    <fullName>Culture_Highlights__c</fullName>
    <label>Culture Highlights</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>