force-app/main/default/objects/Employer_Profile__c/fields/Last_Enriched__c.field-meta.xml
<CustomField>
    <fullName>Last_Enriched__c</fullName>
    <label>Last Enriched</label>
    <type>DateTime</type>
</CustomField>