force-app/main/default/objects/Employer_Profile__c/fields/Needs_Review__c.field-meta.xml
<CustomField>
    <fullName>Needs_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Review</label>
    <type>Checkbox</type>
</CustomField>