force-app/main/default/objects/Employer_Profile__c/fields/Salary_Data_Source__c.field-meta.xml
<CustomField>
    <fullName>Salary_Data_Source__c</fullName>
    <label>Salary Data Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>