force-app/main/default/objects/Employer_Profile__c/fields/Typical_Roles__c.field-meta.xml
<CustomField>
    <fullName>Typical_Roles__c</fullName>
    <label>Typical Roles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>