force-app/main/default/objects/Employer_Profile__c/recordTypes/Auto_Generated.recordType-meta.xml
<RecordType>
    <fullName>Auto_Generated</fullName>
    <active>true</active>
    <label>Auto Generated</label>
</RecordType>