force-app/main/default/objects/Employer_Profile__c/recordTypes/Pending_Review.recordType-meta.xml
<RecordType>
    <fullName>Pending_Review</fullName>
    <active>true</active>
    <label>Pending Review</label>
</RecordType>