force-app/main/default/objects/Employer_Profile__c/recordTypes/Rejected.recordType-meta.xml
<RecordType>
    <fullName>Rejected</fullName>
    <active>true</active>
    <label>Rejected</label>
</RecordType>