force-app/main/default/objects/Employer_Profile__c/recordTypes/Verified.recordType-meta.xml
<RecordType>
    <fullName>Verified</fullName>
    <active>true</active>
    <label>Verified</label>
</RecordType>