force-app/main/default/objects/Employer_Profile__c/validationRules/ABN_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>ABN_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    ISBLANK(ABN__c),
    NOT(REGEX(ABN__c, &quot;^[0-9]{11}$&quot;))
)</errorConditionFormula>
    <errorDisplayField>ABN__c</errorDisplayField>
    <errorMessage>ABN is required and must contain exactly 11 digits.</errorMessage>
</ValidationRule>